:+1: try to solve content shift

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,6 @@ html {
   // avoid slight content shift
   height: initial;
   body {
-    overflow-x: hidden;
     /*overscroll-behavior-y: none;*/
 
     -webkit-font-smoothing: antialiased;
